@@ -3,6 +3,7 @@ v1.14.3-snapshot
 Bug fixes:
 - #7135 Fix issue with function keys on macOS
 - #7140 Configure scroll direction on a per-computer basis
+- #7141 Code refactoring for the configure scroll direction task
 ===========
 
 v1.14.2-stable
